--- a/index.html
+++ b/index.html
@@ -1,46 +1,289 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Evaengine by AlloVince</title>
+<html lang="en">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Evaengine</h1>
-        <p>A development engine based on Phalcon Framework</p>
+	<head>
+		<meta charset="utf-8">
 
-        <p class="view"><a href="https://github.com/AlloVince/EvaEngine">View the Project on GitHub <small>AlloVince/EvaEngine</small></a></p>
+        <title>EvaEngine</title>
 
+		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="author" content="Hakim El Hattab">
 
-        <ul>
-          <li><a href="https://github.com/AlloVince/EvaEngine/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/AlloVince/EvaEngine/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/AlloVince/EvaEngine">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>
-<a name="evaengine" class="anchor" href="#evaengine"><span class="octicon octicon-link"></span></a>EvaEngine</h1>
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-<p><a href="https://travis-ci.org/AlloVince/EvaEngine"><img src="https://travis-ci.org/AlloVince/EvaEngine.svg?branch=master" alt="Build Status"></a></p>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<p>A development engine based on Phalcon Framework.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/AlloVince">AlloVince</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+		<link rel="stylesheet" href="css/reveal.min.css">
+		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+
+		<!-- For syntax highlighting -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
+
+		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
+		<script>
+			if( window.location.search.match( /print-pdf/gi ) ) {
+				var link = document.createElement( 'link' );
+				link.rel = 'stylesheet';
+				link.type = 'text/css';
+				link.href = 'css/print/pdf.css';
+				document.getElementsByTagName( 'head' )[0].appendChild( link );
+			}
+		</script>
+
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
+	</head>
+
+	<body>
+
+		<div class="reveal">
+
+			<!-- Any section element inside of this container is displayed as a slide -->
+			<div class="slides">
+				<section>
+                    <p><span style="color:red">A</span>llo<span style="color:red">V</span>ince is <span style="color:red">E</span>vil</p>
+                    <h1><span style="color:red">EVA</span>Engine</h1>
+                    <p>Yet another development engine based on Phalcon</p>
+                </section>
+
+                <section>
+                    <h2>1.1 Why Phalcon</h2>
+                    <h4>根据业务做技术选型，我们的需求是什么</h4>
+                    <ol>
+                        <li>产品形态非常复杂（新闻、行情、社区）</li>
+                        <li>必须快</li>
+                        <li>松耦合，每个人能独立承担业务</li>
+                    </ol>
+                    <hr/>
+                    
+                    <ol>
+                        <li>小框架还是大框架</li>
+                        <li>有没有可能组合两个框架</li>
+                        <li>对于PHP重框架有什么优化手段</li>
+                    </ol>
+                </section>
+
+                <section>
+                    <h2>1.2.1 段子</h2>
+                    <ul>
+                        <li>ZF2：我有官方支持</li>
+                        <li>Phalcon：我快</li>
+                        <li>Symfony：我有数不清的Bundle</li>
+                        <li>Phalcon：我快</li>
+                        <li>Laravel：我代码书写无比优雅</li>
+                        <li>Phalcon：我快</li>
+                    </ul>
+                    <hr/>
+                    <p><strong><span style="color:red">天下武功、唯快不破</span></strong></p>
+                </section>
+
+                <section>
+                    <h2>1.2.2 优缺点</h2>
+                    <p>优点</p>
+                    <ul>
+                        <li>性能提升6～15倍</li>
+                        <li>框架功能够用，可以解决70%的需求</li>
+                        <li>DI设计优秀，扩展性好</li>
+                    </ul>
+                    <hr/>
+                    <p>缺点</p>
+                    <ul>
+                        <li>黑盒</li>
+                        <li>辅助工具简陋</li>
+                        <li>部署运维及测试略麻烦</li>
+                        <li>一些小坑</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>1.3 Phalcon存在的问题及坑</h2>
+                    <ol>
+                        <li>默认启动的DI太简单，不能满足大型项目需求</li>
+                        <li>模块实现较弱，模块加载在路由之后</li>
+                        <li>View不够友好，强制关联Layout和Template，没有考虑多模块</li>
+                        <li>Form太简陋，没有考虑数据关联的情况</li>
+                        <li>一些奇怪的行为（没有View时不抛异常、Dispatch抛异常得到白屏等）</li>
+                    </ol>
+                    <hr/>
+                </section>
+
+                <section>
+                    <h2>2.1 EvaEngine所要实现的</h2>
+                    <p>修改原则：避免深度定制，避免覆盖接口。通过扩展新方法及调用事件为主</p>
+                    <ol>
+                        <li>内置配置好的DI，将系统逻辑简化到配置文件级别 √</li>
+                        <li>真正意义上的模块化 √</li>
+                        <li>View的扩展，支持模块间调用 √</li>
+                        <li>Form的扩展，Form间可以关联 √</li>
+                        <li>统一异常处理封装 √</li>
+                        <li>模块间的协同处理（考虑插件？）</li>
+                        <li>方便的数据库迁移工具（含ORM映射） </li>
+                        <li>更好的调试工具（Router/Events） </li>
+                    </ol>
+                    <p>目标：所有资源集中到一个框架，通过组合模块完成80%的基础工作</p>
+                </section>
+
+                <section>
+                    <h2>2.2 EveEngine的层级划分</h2>
+                    <pre>
+- Application (Web) 每个Application都有唯一的Name
+  - Application Config
+    - Module Load Config 命名根据Application Name
+    - Global Config
+    - Local Config
+  - Module
+    - Module Bootstrap File
+    - Module Config
+    - Controller
+      - Admin Controller
+    - Model
+      - Entity
+    - Form
+    - Events Listener 
+    - View
+      - Helper
+      - Partial
+      - Admin View
+  - Another Module
+- Another Application (API)
+                    </pre>
+                </section>
+
+                <section>
+                    <h2>2.3 EveEngine的目录结构</h2>
+                    <pre>
+- apps #存放Application
+- cache #数据/页面缓存
+- config #全局配置/配置文件缓存
+- modules #存放公共模块
+  - EvaUser #模块
+    - Module.php #模块启动文件
+    - config #模块配置/前台路由/后台路由
+    - views  #模块Views
+      - layouts #布局
+      - index/index #模板
+      - partial #组件
+      - admin #后台
+        - layouts #布局
+        - partial #组件
+    - src #源代码
+      - EvaUser　#PSR-2
+        - Controllers
+          - Admin #后台
+        - Models
+        - Entities
+        - Forms
+        - Events
+　　　　- Utils
+        - View
+          - Helpers
+- public #入口文件夹
+- utilities #辅助工具
+- workers #后台任务</pre>
+                </section>
+
+                <section>
+                    <h2>2.4 EveEngine的启动代码</h2>
+                    <pre>
+use Eva\EvaEngine\Engine;
+
+//设置Application根目录， 设置AppName
+$engine = new Engine(__DIR__ . '/..', 'AppName'); 
+
+$engine
+->loadModules(include __DIR__ . '/../config/modules.' . $engine->getAppName() . '.php') 
+//根据AppName加载模块配置文件，初始化DI
+->bootstrap() //初始化Application，注册模块事件，注册ErrorHandler
+->run(); //Phalcon\Application->handle()
+</pre>
+                </section>
+
+                <section>
+                    <h2>3.1 EveEngine的Module</h2>
+                    <p>如何定义模块</p>
+                    <ol>
+                        <li>具有独立的一组功能，可以支持一个最小规模的产品（低耦合，高内聚）</li>
+                        <li>有自己的MVC</li>
+                        <li>有自己的管理后台</li>
+                        <li>有自己的前台路由（可选）</li>
+                        <li>有自己的后台路由（可选）</li>
+                        <li>模块启动文件必须实现接口<code>Eva\EvaEngine\Module\StandardInterface</code></li>
+                    </ol>
+                    <hr/>
+                </section>
+
+                <section>
+                    <h2>3.2 Module的加载过程</h2>
+                    <ol>
+                        <li>通过DI实例化EvaEngine\Module\ModuleManager</li>
+                        <li>设置Module默认路径<code>$moduleManager-&gt;setDefaultPath()</code></li>
+                        <li>正式加载<code>$moduleManager-&gt;setDefaultPath()</code>
+                            <ol>
+                                <li>触发事件<code>module:beforeLoadModule</code></li>
+                                <li>配置模块，注册模块启动文件</li>
+                                <li>注册全局加载器<code>Module::registerGlobalAutoloaders()</code>[缓存]</li>
+                                <li>注册全局事件<code>Module::registerGlobalEventListeners()</code>[缓存]</li>
+                                <li>注册全局Helper<code>Module::registerGlobalViewHelpers()</code>[缓存]</li>
+                                <li>注册跨模块的Entity关系<code>Module::registerGlobalRelations()</code>[缓存]</li>
+                                <li>触发事件<code>module:afterLoadModule</code></li>
+                            </ol>                       
+                        </li>
+                    </ol>
+                </section>
+
+                <section>
+                    <h2>3.3 如何配置一个模块</h2>
+                    <p>默认配置</p>
+                    <pre>
+$engine->loadModules(array("EvaUser"));
+</pre>
+                    <p>自定义配置</p>
+                    <pre>
+$engine->loadModules(array("EvaUser" => array(
+    'className' => 'Eva\EvaUser\Module',
+    'path' => __DIR__ . '/../modules/EvaUser/Module.php'
+)));
+</pre>
+                </section>
+
+			</div>
+
+		</div>
+
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.min.js"></script>
+
+		<script>
+
+			// Full list of configuration options available here:
+			// https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: true,
+
+				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
+				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+
+				// Parallax scrolling
+				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
+				// parallaxBackgroundSize: '2100px 900px',
+
+				// Optional libraries used to extend on reveal.js
+				dependencies: [
+					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+				]
+			});
+
+		</script>
+
+	</body>
 </html>
