--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </section>
 
                 <section>
-                    <h2>2.2 EveEngine的层级划分</h2>
+                    <h2>2.2 EvaEngine的层级划分</h2>
                     <pre>
 - Application (Web) 每个Application都有唯一的Name
   - Application Config
@@ -152,7 +152,7 @@
                 </section>
 
                 <section>
-                    <h2>2.3 EveEngine的目录结构</h2>
+                    <h2>2.3 EvaEngine的目录结构</h2>
                     <pre>
 - apps #存放Application
 - cache #数据/页面缓存
@@ -185,7 +185,7 @@
                 </section>
 
                 <section>
-                    <h2>2.4 EveEngine的启动代码</h2>
+                    <h2>2.4 EvaEngine的启动代码</h2>
                     <pre>
 use Eva\EvaEngine\Engine;
 
@@ -201,7 +201,7 @@ $engine
                 </section>
 
                 <section>
-                    <h2>3.1 EveEngine的Module</h2>
+                    <h2>3.1 EvaEngine的Module</h2>
                     <p>如何定义模块</p>
                     <ol>
                         <li>具有独立的一组功能，可以支持一个最小规模的产品（低耦合，高内聚）</li>
@@ -349,6 +349,26 @@ $engine->loadModules(array(
 
                 <section>
                     <h2>5.4 内部错误代码</h2>
+                    <p>待定</p>
+                </section>
+
+                <section>
+                    <h2>6.1 对Controller的扩展</h2>
+                    <p>待定</p>
+                </section>
+
+                <section>
+                    <h2>7.1 对Model的扩展</h2>
+                    <p>待定</p>
+                </section>
+
+                <section>
+                    <h2>8.1 对View的扩展</h2>
+                    <p>待定</p>
+                </section>
+
+                <section>
+                    <h2>9.1 对Form的扩展</h2>
                     <p>待定</p>
                 </section>
 			</div>
